# Mira-Multi_Agent-AI-Companion

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  PROJECT_DOCUMENTATION.md  README.md  autogen.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  setup.py  sql_test.py  start-mira-backend.ps1  start_web_server.py  test_async_agents.py  test_memory_system.py  test_tools_refactor.py  test_visual_effect_modification.py
configs/: OAI_CONFIG_LIST.json.example  user_config.json
emotional_companion/: __init__.py  cli.py
emotional_companion/agents/: __init__.py  agent_system.py  conversation_handler.py
emotional_companion/effects/: visual_effects_controller.py
emotional_companion/memory/: __init__.py  emotional_memory.py
emotional_companion/utils/: __init__.py  conversation_logger.py  disable_telemetry.py  env_utils.py  memory_viewer.py  time_utils.py
mira-desktop/: main.js  package.json  preload.js
mira-desktop/web/: index.html
mira-desktop/web/css/: style.css  visual-effects.css
mira-desktop/web/js/: chat.js  visual-effects.js
scripts/: check_dependencies.py  start_companion.py
test_db/: chroma.sqlite3
web/: README.md  nginx.conf.example
web/css/: style.css
web/js/: chat.js
web_api/: config_manager.py  models.py  requirements-web.txt  start_web_api.py  web_api.py
